--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="main.css">
   
-  <title>Frontend Mentor | GitHub user search app</title>
+  <title>GitHub user search app</title>
 </head>
 <body>
+  <div>
+  <h1>devfinder</h1>
+    <h2>Dark</h2>
+    <img src="./assets/icon-moon.svg" alt="dark mode">
+  </div>
+  <div id="searchBox">
+    <img src="./assets/icon-search.svg" alt="">
+    <input type="search" id="searchBar">
+    <input type="button" value="Search" onclick="submit()">
+  </div>
+  <div id="userCard">
 
-  devfinder
-
-  Light
-  Dark
-
-  Search GitHub username...
-  Search
-
-  Joined
-
-  Repos
-  Followers
-  Following
-
+  </div>
 </body>
 <script src="index.js"></script>
 </html>
